# eye-extraction-and-js-cpp-wrapper

./: README.md
opencvwrapper/: README.md  binding.gyp  index.js  make  package.json
opencvwrapper/lib/: CMakeLists.txt  CPPWrapper.cpp  CPPWrapper.h  Makefile  libopencvjs.cpp  libopencvjs.h  trackingjsGazeCV.cpp
opencvwrapper/src/: OpenCvManager.cpp  OpenCvManager.h  main.cc
